--- a/src/css/index-media.css
+++ b/src/css/index-media.css
@@ -3,10 +3,78 @@
     N A V I G A T I O N  B A R 
    -------------------------------*/
 
-@media only screen and (max-width:99px){
+@media only screen and (max-width:999px){
     .logo--area , .search--bar , .shoping--action{
         margin:0em 1em 0em 1em;
-        background: teal!important;
     }
     
+}
+
+@media only screen and (min-width:1226px){
+    .shoping--action{
+        right:2em;
+    }
+}
+
+@media only screen and (max-width:900px){
+   
+    .shoping--action > span{
+        padding:0.5em 0.8em 0.5em 0.8em;
+        margin:0 0.1em 0 0.1em;
+    }
+
+    .shoping--action > span > span{
+        display: none;
+    }
+    
+}
+
+@media only screen and (max-width:768px){
+    
+    .side--nav--toggler{
+        display: inline-block;
+    }
+
+    .logo--area , .search--bar , .shoping--action{
+        margin:0;
+    }
+    
+    .search--bar input,
+    .search--bar button{
+        padding:0.6em;
+    }
+
+    .search--bar input{
+        padding-left:0.6em;
+        padding-right:3em;
+    }
+
+    .logo--area{
+        margin:0.5em 0.5em 1.1em 0.3em;
+    }
+    
+    .logo--area h3{
+        font-size: 18px;
+    }
+
+    .search--bar{
+        width:95%;
+        left:50%;
+        transform:translateX(-50%);
+        display: block;
+    }
+
+    .shoping--action{
+        transform:translateY(0%);
+        top:1.1em;
+    }
+    
+    .shoping--action > span{
+       padding: 0.2em 0.8em 0.5em 0.8em;
+    }
+
+    .shoping--action > span > i{
+        font-size:14px;
+    }
+
 }
