--- a/src/css/index.css
+++ b/src/css/index.css
@@ -28,8 +28,67 @@ body , html{
 nav{
     position: relative;
     width:100%;
-    padding:0.8em 0em 0.8em 0em;
+    padding:1em 0em 1em 0em;
     background:#512da8;
+}
+
+.side--nav--toggler{
+    position: relative;
+    display: none;
+    width:25px;
+    height:25px;
+    margin-left:0.8em;
+    vertical-align: middle;
+    top:-3px;
+    cursor: pointer;
+}
+
+.side--nav--toggler .line{
+    position: absolute;
+    width:80%;
+    height:2px;
+    background:#fff;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    margin:auto;
+}
+
+.side--nav--toggler.toggle--off > .line{
+    transition:transform 200ms ease 0s ,opacity 200ms ease 0s, top 200ms ease 200ms ;
+}
+
+.side--nav--toggler.toggle--on > .line{
+    transition:top 200ms ease 0s ,opacity 200ms ease 0s , transform 200ms ease 200ms;
+}
+
+.side--nav--toggler.toggle--off >  .line1{
+    top:-10px;
+}
+
+.side--nav--toggler.toggle--off > .line2{
+    top:0;
+    opacity: 1;
+}
+
+.side--nav--toggler.toggle--off >  .line3{
+    top:10px;
+}
+
+.side--nav--toggler.toggle--on >  .line1{
+    top:0px;
+    transform:rotate(45deg);
+}
+
+.side--nav--toggler.toggle--on > .line2{
+    top:0;
+    opacity: 0;
+}
+
+.side--nav--toggler.toggle--on >  .line3{
+    top:0px;
+    transform:rotate(135deg);
 }
 
 .logo--area , .search--bar , .shoping--action{
@@ -37,7 +96,6 @@ nav{
     display:inline-block;
     vertical-align: middle;
     margin:0em 1.5em 0em 1.5em;
-    border:1px solid tomato;
 }
 
 .logo--area h3{
@@ -81,6 +139,10 @@ nav{
 
 .shoping--action{
     color:#fff;
+    position: absolute;
+    top:50%;
+    right:1em;
+    transform:translateY(-50%)
 }
 
 .shoping--action > span{
